--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client-install": "cd client && npm install",
     "server": "cd server_comp && php -S localhost:8000",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "npm run dev"
   },
   "author": "Brad Traversy",
   "license": "MIT",
